--- a/public/index.html
+++ b/public/index.html
@@ -14,8 +14,7 @@
     <div class="container">
         <div class="menu">
             <ul>
-                <li class="logo"> <img src="https://s.svgbox.net/hero-solid.svg?ic=globe-alt&fill=F8F8FF" width="32"
-                        height="32"> </li>
+                <li class="logo"> <i class="fa fa-cloud"></i></li>
                 <li class="active">Home</li>
                 <li>Services</li>
                 <li>Prodcuts</li>
@@ -36,7 +35,7 @@
                 </div>
             </div>
             <div class="app-pic">
-                <img src="/public/images/city1.png">
+                <img src="./images/city1.png">
             </div>
         </div>
 
